--- a/solution-hw1/css/style.css
+++ b/solution-hw1/css/style.css
@@ -1,10 +1,21 @@
+/* ALL PAGES *********************************************** */
+
+body {
+    font-family: sans-serif;
+}
+
 .logo {
     width: 400px;
+}
+
+hr {
+    border: 1px solid black;
 }
 
 .navbar {
     text-align: center;
     list-style-type: none;
+    padding-left: 0;
 }
 
 .navbar a {
@@ -12,6 +23,7 @@
     font-weight: bold;
     text-decoration: none;
     color: black;
+    line-height: 30px;
 }
 
 li:hover a {
@@ -21,18 +33,27 @@ li:hover a {
 h3 {
     text-align: center;
     font-weight: normal;
-    font-size: 42px;
+    font-size: 38px;
     line-height: 0px;
 }
 
 p {
-    font-size: 36px;
+    font-size: 34px;
     margin: 5px;
 }
 
 a {
     text-decoration: none;
     color: black;
+}
+
+button {
+    font-weight: 600;
+    color: black;
+    background-color: yellow;
+    padding: 8px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 
@@ -77,14 +98,105 @@ a {
 
 /* DETAIL PAGE ********************************************* */
 
+.detail-page {
+    text-align: center;
+}
+
 .detail-product-image {
     width: 600px;
     border: solid black 2px;
 }
 
+.selections {
+    display: flex;
+    flex-direction: column;
+    margin-left: 460px;
+    text-align: left;
+    width: 250px;
+}
+
+#product-description {
+    padding-top: 10px;
+    padding-bottom: 25px;
+    font-size: 18px;
+}
+
+.product-detail {
+    font-size: 18px;
+}
+
+.dropdowns {
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+select {
+    font-size: 18px;
+    margin: 5px;
+    width: 230px;
+}
+
+#detail-finish {
+    display: flex;
+    justify-content: center;
+    line-height: 30px;
+    padding: 50px;
+    gap: 24px;
+}
+
+#detail-price {
+    font-weight: 600;
+    font-size: 18px;
+}
+
 /* SHOPPING CART ******************************************* */
+
+.cart-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 40px;
+    padding-bottom: 40px;
+}
+
+.cart-product {
+    text-align: center;
+    flex-wrap: wrap;
+    height: fit-content;
+    padding-bottom: 10px;
+}
+
+.remove {
+    font-size: 14px;
+    font-weight: 600;
+    text-decoration: underline;
+    padding-bottom: 15px;
+}
+
+.cart-info p {
+    font-size: 18px;
+    line-height: 1;
+}
+
+.cart-price {
+    font-size: 20px;
+    padding-top: 15px;
+}
 
 .cart-product-image {
     width: 200px;
     border: solid black 2px;
 }
+
+#bold-line {
+    border: 1.5px solid black;
+    width: 70%;
+    margin: auto;
+}
+
+#cart-checkout {
+    text-align: center;
+    line-height: 30px;
+    padding-bottom: 50px;
+}
+
