--- a/solution-hw2/css/style.css
+++ b/solution-hw2/css/style.css
@@ -1,7 +1,17 @@
 /* ALL PAGES *********************************************** */
 
 body {
-    font-family: sans-serif;
+    font-family: Arial, sans-serif;
+}
+
+.page-header {
+    display: flex;
+    margin-bottom: 40px;
+}
+
+.header-right {
+    width: 100%; 
+    margin-left: 30px;
 }
 
 .logo {
@@ -9,36 +19,42 @@ body {
 }
 
 hr {
-    border: 1px solid black;
+    border: 2px solid black;
 }
 
 .navbar {
-    text-align: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: right;
+    text-align: right;
     list-style-type: none;
-    padding-left: 0;
+    margin: 40px;
+    margin-right: 60px;
+    gap: 40px;
 }
 
 .navbar a {
-    font-size: 16px;
+    font-size: 20px;
     font-weight: bold;
     text-decoration: none;
     color: black;
     line-height: 30px;
+    
 }
 
 li:hover a {
     background-color: yellow;
 }
 
-h3 {
-    text-align: center;
+h1 {
+    text-align: left;
     font-weight: normal;
     font-size: 38px;
-    line-height: 0px;
+    margin-top: 60px;
 }
 
 p {
-    font-size: 34px;
+    font-size: 24px;
     margin: 5px;
 }
 
@@ -47,31 +63,25 @@ a {
     color: black;
 }
 
-button {
-    font-weight: 600;
-    color: black;
-    background-color: yellow;
-    padding: 8px;
-    padding-left: 20px;
-    padding-right: 20px;
-}
-
 
 /* PRODUCT GALLERY ***************************************** */
 
 .products-list {
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
+    width: 1000px;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     gap: 20px;
+    margin: auto;
+    padding-bottom: 50px;
 }
 
 .product-box {
     text-align: left;
     flex-wrap: wrap;
     height: fit-content;
-    width: 400px;
+    width: 285px;
     padding: 10px;
     padding-bottom: 0px;
     line-height: 1;
@@ -91,7 +101,7 @@ button {
 }
 
 .product-image {
-    width: 400px;
+    width: 285px;
     border: solid black 2px;
 }
 
@@ -99,30 +109,30 @@ button {
 /* DETAIL PAGE ********************************************* */
 
 .detail-page {
-    text-align: center;
+    display: flex;
+    margin-bottom: 50px;
 }
 
 .detail-product-image {
     width: 600px;
     border: solid black 2px;
+    margin-left: 75px;
 }
 
 .selections {
-    display: flex;
-    flex-direction: column;
-    margin-left: 460px;
+    margin: auto;
     text-align: left;
-    width: 250px;
+    width: 320px;
 }
 
 #product-description {
     padding-top: 10px;
-    padding-bottom: 25px;
-    font-size: 18px;
+    padding-bottom: 75px;
+    font-size: 24px;
 }
 
 .product-detail {
-    font-size: 18px;
+    font-size: 24px;
 }
 
 .dropdowns {
@@ -131,22 +141,33 @@ button {
 }
 
 select {
-    font-size: 18px;
+    font-size: 24px;
     margin: 5px;
-    width: 230px;
+    width: 320px;
 }
 
 #detail-finish {
     display: flex;
-    justify-content: center;
+    justify-content: right;
+    align-items: center;
     line-height: 30px;
-    padding: 50px;
+    padding-top: 75px;
     gap: 24px;
 }
 
 #detail-price {
     font-weight: 600;
-    font-size: 18px;
+    font-size: 24px;
+}
+
+#add-to-cart-button {
+    font-weight: 600;
+    font-size: 20px;
+    color: black;
+    background-color: yellow;
+    padding: 12px;
+    padding-left: 40px;
+    padding-right: 40px;
 }
 
 /* SHOPPING CART ******************************************* */
@@ -154,49 +175,79 @@ select {
 .cart-list {
     display: flex;
     flex-direction: column;
-    align-items: center;
     gap: 40px;
-    padding-bottom: 40px;
+    padding-left: 300px;
+    padding-right: 75px;
 }
 
 .cart-product {
-    text-align: center;
-    flex-wrap: wrap;
-    height: fit-content;
-    padding-bottom: 10px;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
 }
 
-.remove {
-    font-size: 14px;
-    font-weight: 600;
-    text-decoration: underline;
-    padding-bottom: 15px;
+.cart-product-main {
+    display: flex;
+    flex-direction: row;
+    align-content: space-between;
 }
 
-.cart-info p {
-    font-size: 18px;
-    line-height: 1;
-}
-
-.cart-price {
+.cart-info {
+    display: flex;
+    width: 100%;
     font-size: 20px;
-    padding-top: 15px;
+    line-height: 2;
+}
+
+.cart-info-details {
+    margin: auto;
+    width: 100%;
+    padding-left: 25px;
+}
+
+.cart-info-price {
+    margin: auto;
+    text-align: right;
+    font-size: 20px;
 }
 
 .cart-product-image {
     width: 200px;
     border: solid black 2px;
+    margin-bottom: 10px;
+}
+
+.remove {
+    font-size: 24px;
+    font-weight: 600;
+    text-decoration: underline;
 }
 
 #bold-line {
     border: 1.5px solid black;
-    width: 70%;
-    margin: auto;
+    width: 100%;
+    margin-bottom: -20px;
 }
 
 #cart-checkout {
-    text-align: center;
-    line-height: 30px;
-    padding-bottom: 50px;
+    text-align: right;
+    margin-bottom: 50px;
+}
+
+#cart-price {
+    display: flex;
+    justify-content: right;
+    gap: 435px;
+    margin-bottom: 10px;
+}
+
+#checkout-button {
+    font-weight: 600;
+    font-size: 20px;
+    color: black;
+    background-color: yellow;
+    padding: 12px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
